# Tensors-FromScratch-Cpp

./: .gitignore  CMakeLists.txt  Doc.docx  README.md
include/: Globals.hpp  Operations.hpp  Tensor.hpp  Testing.hpp  opencl_kernels.h  opencl_setup.h
src/: Operations.cpp  Tensor.cpp  main.cpp  opencl_setup.cpp
